--- a/pages/3658.html
+++ b/pages/3658.html
@@ -294,7 +294,7 @@ margin-left: 0em;
     <a href="/nlab/show/HomePage" accesskey="H" title="Home page">Home Page</a> |
     <a href="/nlab/all_pages" accesskey="A" title="List of all pages">All Pages</a> |
     <a href="/nlab/latest_revisions" accesskey="U" title="Latest edits and page creations">Latest Revisions</a> |
-    <a href="https://nforum.ncatlab.org/discussion/909/#Item_4" title="Discuss this page in its dedicated thread on the nForum" style="color: black">Discuss this page</a> |
+    <a href="https://nforum.ncatlab.org/discussion/909/#Item_5" title="Discuss this page in its dedicated thread on the nForum" style="color: black">Discuss this page</a> |
     <a href="/nlab/feeds" title="Subscribe to changes by Atom">Feeds</a> |
 <form accept-charset="utf-8" action="/nlab/search" id="navigationSearchForm" method="get">      <fieldset class="search"><input type="text" id="searchField" name="query" value="Search"
              onfocus="this.value == 'Search' ? this.value = '' : true"
@@ -317,7 +317,17 @@ margin-left: 0em;
 
 <h4 id="aqft">AQFT</h4>
 
-<div class="hide"><p><strong><a class="existingWikiWord" href="/nlab/show/algebraic+quantum+field+theory">algebraic quantum field theory</a></strong> (<a class="existingWikiWord" href="/nlab/show/perturbative+AQFT">perturbative</a>, <a class="existingWikiWord" href="/nlab/show/AQFT+on+curved+spacetime">on curved spacetimes</a>, <a class="existingWikiWord" href="/nlab/show/homotopical+algebraic+quantum+field+theory">homotopical</a>)</p><p><a class="existingWikiWord" href="/nlab/show/A+first+idea+of+quantum+field+theory">Introduction</a></p><h2 id="concepts">Concepts</h2><p><strong><a class="existingWikiWord" href="/nlab/show/field+theory">field theory</a></strong>:</p><ul>
+<div class="hide"><div>
+
+<p><strong><a class="existingWikiWord" href="/nlab/show/algebraic+quantum+field+theory">algebraic quantum field theory</a></strong> (<a class="existingWikiWord" href="/nlab/show/perturbative+AQFT">perturbative</a>, <a class="existingWikiWord" href="/nlab/show/AQFT+on+curved+spacetime">on curved spacetimes</a>, <a class="existingWikiWord" href="/nlab/show/homotopical+algebraic+quantum+field+theory">homotopical</a>)</p>
+
+<p><a class="existingWikiWord" href="/nlab/show/A+first+idea+of+quantum+field+theory">Introduction</a></p>
+
+<h2 id="concepts">Concepts</h2>
+
+<p><strong><a class="existingWikiWord" href="/nlab/show/field+theory">field theory</a></strong>:</p>
+
+<ul>
 <li>
 <p><a class="existingWikiWord" href="/nlab/show/classical+field+theory">classical</a>, <a class="existingWikiWord" href="/nlab/show/prequantum+field+theory">pre-quantum</a>, <a class="existingWikiWord" href="/nlab/show/quantum+field+theory">quantum</a>, <a class="existingWikiWord" href="/nlab/show/perturbative+quantum+field+theory">perturbative quantum</a></p>
 </li>
@@ -325,7 +335,11 @@ margin-left: 0em;
 <li>
 <p><a class="existingWikiWord" href="/nlab/show/relativistic+field+theory">relativistic</a>, <a class="existingWikiWord" href="/nlab/show/Euclidean+field+theory">Euclidean</a>, <a class="existingWikiWord" href="/nlab/show/thermal+quantum+field+theory">thermal</a></p>
 </li>
-</ul><p><strong><a class="existingWikiWord" href="/nlab/show/Lagrangian+field+theory">Lagrangian field theory</a></strong></p><ul>
+</ul>
+
+<p><strong><a class="existingWikiWord" href="/nlab/show/Lagrangian+field+theory">Lagrangian field theory</a></strong></p>
+
+<ul>
 <li>
 <p><a class="existingWikiWord" href="/nlab/show/field+%28physics%29">field (physics)</a></p>
 
@@ -381,7 +395,11 @@ margin-left: 0em;
 </li>
 </ul>
 </li>
-</ul><p><strong><a class="existingWikiWord" href="/nlab/show/quantization">quantization</a></strong></p><ul>
+</ul>
+
+<p><strong><a class="existingWikiWord" href="/nlab/show/quantization">quantization</a></strong></p>
+
+<ul>
 <li>
 <p><a class="existingWikiWord" href="/nlab/show/geometric+quantization">geometric quantization</a><a class="existingWikiWord" href="/nlab/show/geometric+quantization+of+symplectic+groupoids">of symplectic groupoids</a></p>
 </li>
@@ -389,7 +407,11 @@ margin-left: 0em;
 <li>
 <p><a class="existingWikiWord" href="/nlab/show/algebraic+deformation+quantization">algebraic deformation quantization</a>, <a class="existingWikiWord" href="/nlab/show/star+algebra">star algebra</a></p>
 </li>
-</ul><p><strong><a class="existingWikiWord" href="/nlab/show/quantum+mechanical+system">quantum mechanical system</a></strong>, <strong><a class="existingWikiWord" href="/nlab/show/quantum+probability">quantum probability</a></strong></p><ul>
+</ul>
+
+<p><strong><a class="existingWikiWord" href="/nlab/show/quantum+mechanical+system">quantum mechanical system</a></strong>, <strong><a class="existingWikiWord" href="/nlab/show/quantum+probability">quantum probability</a></strong></p>
+
+<ul>
 <li>
 <p><a class="existingWikiWord" href="/nlab/show/subsystem">subsystem</a></p>
 </li>
@@ -489,7 +511,11 @@ margin-left: 0em;
 <li>
 <p><a class="existingWikiWord" href="/nlab/show/picture+of+quantum+mechanics">picture of quantum mechanics</a></p>
 </li>
-</ul><p><strong><a class="existingWikiWord" href="/nlab/show/free+field">free field</a> <a class="existingWikiWord" href="/nlab/show/quantization">quantization</a></strong></p><ul>
+</ul>
+
+<p><strong><a class="existingWikiWord" href="/nlab/show/free+field">free field</a> <a class="existingWikiWord" href="/nlab/show/quantization">quantization</a></strong></p>
+
+<ul>
 <li>
 <p><a class="existingWikiWord" href="/nlab/show/star+algebra">star algebra</a>, <a class="existingWikiWord" href="/nlab/show/Moyal+deformation+quantization">Moyal deformation quantization</a></p>
 </li>
@@ -511,7 +537,11 @@ margin-left: 0em;
 <li>
 <p><a class="existingWikiWord" href="/nlab/show/Fock+space">Fock space</a></p>
 </li>
-</ul><p><strong><a class="existingWikiWord" href="/nlab/show/gauge+theories">gauge theories</a></strong></p><ul>
+</ul>
+
+<p><strong><a class="existingWikiWord" href="/nlab/show/gauge+theories">gauge theories</a></strong></p>
+
+<ul>
 <li>
 <p><a class="existingWikiWord" href="/nlab/show/gauge+symmetry">gauge symmetry</a></p>
 </li>
@@ -539,7 +569,11 @@ margin-left: 0em;
 <li>
 <p><a class="existingWikiWord" href="/nlab/show/gauge+anomaly">gauge anomaly</a></p>
 </li>
-</ul><p><strong><a class="existingWikiWord" href="/nlab/show/interacting+field+theory">interacting field</a> <a class="existingWikiWord" href="/nlab/show/quantization">quantization</a></strong></p><ul>
+</ul>
+
+<p><strong><a class="existingWikiWord" href="/nlab/show/interacting+field+theory">interacting field</a> <a class="existingWikiWord" href="/nlab/show/quantization">quantization</a></strong></p>
+
+<ul>
 <li>
 <p><a class="existingWikiWord" href="/nlab/show/causal+perturbation+theory">causal perturbation theory</a>, <a class="existingWikiWord" href="/nlab/show/perturbative+AQFT">perturbative AQFT</a></p>
 </li>
@@ -601,7 +635,11 @@ margin-left: 0em;
 </li>
 </ul>
 </li>
-</ul><p><strong><a class="existingWikiWord" href="/nlab/show/renormalization">renormalization</a></strong></p><ul>
+</ul>
+
+<p><strong><a class="existingWikiWord" href="/nlab/show/renormalization">renormalization</a></strong></p>
+
+<ul>
 <li>
 <p><a class="existingWikiWord" href="/nlab/show/renormalization+scheme">("re-")normalization scheme</a></p>
 
@@ -659,7 +697,13 @@ margin-left: 0em;
 </li>
 </ul>
 </li>
-</ul><h2 id="Theorems">Theorems</h2><h3 id="states_and_observables">States and observables</h3><ul>
+</ul>
+
+<h2 id="Theorems">Theorems</h2>
+
+<h3 id="states_and_observables">States and observables</h3>
+
+<ul>
 <li>
 <p><a class="existingWikiWord" href="/nlab/show/order-theoretic+structure+in+quantum+mechanics">order-theoretic structure in quantum mechanics</a></p>
 
@@ -701,7 +745,11 @@ margin-left: 0em;
 <li>
 <p><a class="existingWikiWord" href="/nlab/show/Kadison-Singer+problem">Kadison-Singer problem</a></p>
 </li>
-</ul><h3 id="operator_algebra">Operator algebra</h3><ul>
+</ul>
+
+<h3 id="operator_algebra">Operator algebra</h3>
+
+<ul>
 <li>
 <p><a class="existingWikiWord" href="/nlab/show/Wick%27s+theorem">Wick's theorem</a></p>
 </li>
@@ -729,7 +777,11 @@ margin-left: 0em;
 <li>
 <p><a class="existingWikiWord" href="/nlab/show/Haag%27s+theorem">Haag's theorem</a></p>
 </li>
-</ul><h3 id="local_qft">Local QFT</h3><ul>
+</ul>
+
+<h3 id="local_qft">Local QFT</h3>
+
+<ul>
 <li>
 <p><a class="existingWikiWord" href="/nlab/show/Reeh-Schlieder+theorem">Reeh-Schlieder theorem</a></p>
 </li>
@@ -753,7 +805,11 @@ margin-left: 0em;
 <li>
 <p><a class="existingWikiWord" href="/nlab/show/Osterwalder-Schrader+theorem">Osterwalder-Schrader theorem</a> (<a class="existingWikiWord" href="/nlab/show/Wick+rotation">Wick rotation</a>)</p>
 </li>
-</ul><h3 id="perturbative_qft">Perturbative QFT</h3><ul>
+</ul>
+
+<h3 id="perturbative_qft">Perturbative QFT</h3>
+
+<ul>
 <li>
 <p><a class="existingWikiWord" href="/nlab/show/Schwinger-Dyson+equation">Schwinger-Dyson equation</a></p>
 </li>
@@ -761,11 +817,17 @@ margin-left: 0em;
 <li>
 <p><a class="existingWikiWord" href="/nlab/show/main+theorem+of+perturbative+renormalization">main theorem of perturbative renormalization</a></p>
 </li>
-</ul></div>
+</ul>
+</div></div>
 
 <h4 id="physics">Physics</h4>
 
-<div class="hide"><p><strong><a class="existingWikiWord" href="/nlab/show/physics">physics</a></strong>, <a class="existingWikiWord" href="/nlab/show/mathematical+physics">mathematical physics</a>, <a class="existingWikiWord" href="/nlab/show/philosophy+of+physics">philosophy of physics</a></p><h2 id="surveys_textbooks_and_lecture_notes">Surveys, textbooks and lecture notes</h2><ul>
+<div class="hide"><div>
+<p><strong><a class="existingWikiWord" href="/nlab/show/physics">physics</a></strong>, <a class="existingWikiWord" href="/nlab/show/mathematical+physics">mathematical physics</a>, <a class="existingWikiWord" href="/nlab/show/philosophy+of+physics">philosophy of physics</a></p>
+
+<h2 id="surveys_textbooks_and_lecture_notes">Surveys, textbooks and lecture notes</h2>
+
+<ul>
 <li>
 <p><em><a class="existingWikiWord" href="/nlab/show/higher+category+theory+and+physics">(higher) category theory and physics</a></em></p>
 </li>
@@ -777,7 +839,13 @@ margin-left: 0em;
 <li>
 <p><a class="existingWikiWord" href="/nlab/show/books+and+reviews+in+mathematical+physics">books and reviews</a>, <a class="existingWikiWord" href="/nlab/show/physics+resources">physics resources</a></p>
 </li>
-</ul><hr /><p><a class="existingWikiWord" href="/nlab/show/theory+%28physics%29">theory (physics)</a>, <a class="existingWikiWord" href="/nlab/show/model+%28physics%29">model (physics)</a></p><p><a class="existingWikiWord" href="/nlab/show/experiment">experiment</a>, <a class="existingWikiWord" href="/nlab/show/measurement">measurement</a>, <a class="existingWikiWord" href="/nlab/show/computable+physics">computable physics</a></p><ul>
+</ul>
+<hr />
+<p><a class="existingWikiWord" href="/nlab/show/theory+%28physics%29">theory (physics)</a>, <a class="existingWikiWord" href="/nlab/show/model+%28physics%29">model (physics)</a></p>
+
+<p><a class="existingWikiWord" href="/nlab/show/experiment">experiment</a>, <a class="existingWikiWord" href="/nlab/show/measurement">measurement</a>, <a class="existingWikiWord" href="/nlab/show/computable+physics">computable physics</a></p>
+
+<ul>
 <li>
 <p><strong><a class="existingWikiWord" href="/nlab/show/mechanics">mechanics</a></strong></p>
 
@@ -1329,11 +1397,12 @@ margin-left: 0em;
 <li><a class="existingWikiWord" href="/nlab/show/Riemann+hypothesis+and+physics">Riemann hypothesis and physics</a></li>
 </ul>
 </li>
-</ul><div>
+</ul>
+<div>
 <p>
   <a href="/nlab/edit/physicscontents">Edit this sidebar</a>
 </p>
-</div></div>
+</div></div></div>
 </div>
 </div>
 
@@ -1538,13 +1607,13 @@ R(f) := \hat f |_{X^+_m} \; \text{with} \; \hat f := \mathcal{F}(f) = \int_M e^{
 <p><math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><mi>a</mi></mrow><annotation encoding="application/x-tex">a</annotation></semantics></math> and <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><msup><mi>a</mi> <mo>*</mo></msup></mrow><annotation encoding="application/x-tex">a^*</annotation></semantics></math> are the annihilation and creation operators on <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><msub><mi>F</mi> <mi>s</mi></msub><mo stretchy="false">(</mo><mi>H</mi><mo stretchy="false">)</mo></mrow><annotation encoding="application/x-tex">F_s(H)</annotation></semantics></math>, that is <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><mi>a</mi><mo stretchy="false">(</mo><mi>v</mi><mo stretchy="false">)</mo></mrow><annotation encoding="application/x-tex">a(v)</annotation></semantics></math> anihilates a single particle state <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><mi>v</mi></mrow><annotation encoding="application/x-tex">v</annotation></semantics></math> and <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><msup><mi>a</mi> <mo>*</mo></msup><mo stretchy="false">(</mo><mi>v</mi><mo stretchy="false">)</mo></mrow><annotation encoding="application/x-tex">a^*(v)</annotation></semantics></math> creates a single particle state <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><mi>v</mi></mrow><annotation encoding="application/x-tex">v</annotation></semantics></math>.</p>
 
 <p><math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><mi>Ψ</mi></mrow><annotation encoding="application/x-tex">\Psi</annotation></semantics></math> is a distribution solution of the <a class="existingWikiWord" href="/nlab/show/Klein-Gordon+equation">Klein-Gordon equation</a> by construction, that is for every test function <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><mi>f</mi></mrow><annotation encoding="application/x-tex">f</annotation></semantics></math> we get</p>
-<div class="maruku-equation"><math xmlns="http://www.w3.org/1998/Math/MathML" display="block" class="maruku-mathml"><semantics><mrow><mi>Ψ</mi><mo stretchy="false">(</mo><mo stretchy="false">(</mo><mo>□</mo><mo lspace="verythinmathspace" rspace="0em">+</mo><mi>m</mi><mo stretchy="false">)</mo><mi>f</mi><mo stretchy="false">)</mo><mo>=</mo><mn>0</mn></mrow><annotation encoding="application/x-tex">
-\Psi((\Box + m) f) = 0
+<div class="maruku-equation"><math xmlns="http://www.w3.org/1998/Math/MathML" display="block" class="maruku-mathml"><semantics><mrow><mi>Ψ</mi><mo stretchy="false">(</mo><mo stretchy="false">(</mo><mo>□</mo><mo lspace="verythinmathspace" rspace="0em">+</mo><msup><mi>m</mi> <mn>2</mn></msup><mo stretchy="false">)</mo><mi>f</mi><mo stretchy="false">)</mo><mo>=</mo><mn>0</mn></mrow><annotation encoding="application/x-tex">
+\Psi((\Box + m^2) f) = 0
 
 </annotation></semantics></math></div>
 <p>The reason for this is that</p>
-<div class="maruku-equation"><math xmlns="http://www.w3.org/1998/Math/MathML" display="block" class="maruku-mathml"><semantics><mrow><mi>ℱ</mi><mrow><mo stretchy="false">[</mo><mo stretchy="false">(</mo><mo>□</mo><mo lspace="verythinmathspace" rspace="0em">+</mo><mi>m</mi><mo stretchy="false">)</mo><mi>f</mi><mo stretchy="false">]</mo></mrow><mo>=</mo><mo stretchy="false">(</mo><mo lspace="verythinmathspace" rspace="0em">−</mo><msup><mi>p</mi> <mn>2</mn></msup><mo>+</mo><msup><mi>m</mi> <mn>2</mn></msup><mo stretchy="false">)</mo><mi>f</mi><mo>=</mo><mn>0</mn><mspace width="thickmathspace"></mspace><mtext>on</mtext><mspace width="thickmathspace"></mspace><msubsup><mi>X</mi> <mi>m</mi> <mo>+</mo></msubsup></mrow><annotation encoding="application/x-tex">
-\mathcal{F}{[(\Box + m) f]} = (-p^2 + m^2) f = 0 \; \text{on} \; X^+_m
+<div class="maruku-equation"><math xmlns="http://www.w3.org/1998/Math/MathML" display="block" class="maruku-mathml"><semantics><mrow><mi>ℱ</mi><mrow><mo stretchy="false">[</mo><mo stretchy="false">(</mo><mo>□</mo><mo lspace="verythinmathspace" rspace="0em">+</mo><msup><mi>m</mi> <mn>2</mn></msup><mo stretchy="false">)</mo><mi>f</mi><mo stretchy="false">]</mo></mrow><mo>=</mo><mo stretchy="false">(</mo><mo lspace="verythinmathspace" rspace="0em">−</mo><msup><mi>p</mi> <mn>2</mn></msup><mo>+</mo><msup><mi>m</mi> <mn>2</mn></msup><mo stretchy="false">)</mo><mi>f</mi><mo>=</mo><mn>0</mn><mspace width="thickmathspace"></mspace><mtext>on</mtext><mspace width="thickmathspace"></mspace><msubsup><mi>X</mi> <mi>m</mi> <mo>+</mo></msubsup></mrow><annotation encoding="application/x-tex">
+\mathcal{F}{[(\Box + m^2) f]} = (-p^2 + m^2) f = 0 \; \text{on} \; X^+_m
 
 </annotation></semantics></math></div>
 <h3 id="further_examples">Further examples</h3>
@@ -1630,14 +1699,14 @@ R(f) := \hat f |_{X^+_m} \; \text{with} \; \hat f := \mathcal{F}(f) = \int_M e^{
 
 <div class="revisedby">
   <p>
-  Last revised on November  9, 2018 at 10:43:15.
+  Last revised on December  9, 2018 at 16:38:28.
   See the <a href="https://ncatlab.org/nlab/history/Wightman axioms" style="color: #005c19">history</a> of this page for a list of all contributions to it.
   </p>
 </div>
 
 <div class="navigation navfoot">
 
-  <a href="/nlab/edit/Wightman+axioms" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/Wightman+axioms/23" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(23 revisions)</span> | <a href="/nlab/show/diff/Wightman+axioms" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/Wightman+axioms" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
+  <a href="/nlab/edit/Wightman+axioms" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/Wightman+axioms/24" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(24 revisions)</span> | <a href="/nlab/show/diff/Wightman+axioms" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/Wightman+axioms" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
   | <a href="https://ncatlab.org/nlab/show/Wightman axioms/cite" style="color: black">Cite</a>
   <span class="views">
     | Views:
