--- a/pages/19934.html
+++ b/pages/19934.html
@@ -294,7 +294,7 @@ margin-left: 0em;
     <a href="/nlab/show/HomePage" accesskey="H" title="Home page">Home Page</a> |
     <a href="/nlab/all_pages" accesskey="A" title="List of all pages">All Pages</a> |
     <a href="/nlab/latest_revisions" accesskey="U" title="Latest edits and page creations">Latest Revisions</a> |
-    <a href="https://nforum.ncatlab.org/discussion/9269/#Item_10" title="Discuss this page in its dedicated thread on the nForum" style="color: black">Discuss this page</a> |
+    <a href="https://nforum.ncatlab.org/discussion/9269/#Item_11" title="Discuss this page in its dedicated thread on the nForum" style="color: black">Discuss this page</a> |
     <a href="/nlab/feeds" title="Subscribe to changes by Atom">Feeds</a> |
 <form accept-charset="utf-8" action="/nlab/search" id="navigationSearchForm" method="get">      <fieldset class="search"><input type="text" id="searchField" name="query" value="Search"
              onfocus="this.value == 'Search' ? this.value = '' : true"
@@ -571,6 +571,11 @@ margin-left: 0em;
 <ul>
 <li><a href='#general'>General</a></li>
 <li><a href='#flat_orbifolds'>Flat orbifolds</a></li>
+<ul>
+<li><a href='#of_dimension_2'>Of dimension 2</a></li>
+<li><a href='#of_dimension_4'>Of dimension 4</a></li>
+<li><a href='#of_dimension_6'>Of dimension 6</a></li>
+</ul>
 </ul>
 </ul>
 </div>
@@ -635,11 +640,33 @@ margin-left: 0em;
 
 <h3 id="flat_orbifolds">Flat orbifolds</h3>
 
+<h4 id="of_dimension_2">Of dimension 2</h4>
+
 <p>In 2 dimensions</p>
 
 <ul>
-<li id="Guerreiro09">João Guerreiro, <em>Orbifolds and Wallpaper Patterns</em> (<a href="https://faculty.math.illinois.edu/~ruiloja/Estudantes/TrabalhoJGuerreiro.pdf">pdf</a>)</li>
+<li>
+<p><a class="existingWikiWord" href="/nlab/show/John+Milnor">John Milnor</a>, <em>On Lattès Maps</em> (<a href="https://arxiv.org/abs/math/0402147">arXiv:math/0402147</a>)</p>
+</li>
+
+<li id="Guerreiro09">
+<p>João Guerreiro, <em>Orbifolds and Wallpaper Patterns</em> (<a href="https://faculty.math.illinois.edu/~ruiloja/Estudantes/TrabalhoJGuerreiro.pdf">pdf</a>)</p>
+</li>
 </ul>
+
+<h4 id="of_dimension_4">Of dimension 4</h4>
+
+<p>Flat (toroidal) orbifolds of dimension 4 are discussed in</p>
+
+<ul>
+<li>
+<p>Justin R. David, Gautam Mandal, Spenta R. Wadia, <em>Microscopic Formulation of Black Holes in String Theory</em>, Phys.Rept.369:549-686,2002 (<a href="https://arxiv.org/abs/hep-th/0203048">arXiv:hep-th/0203048</a>)</p>
+
+<p>(in the context of <a class="existingWikiWord" href="/nlab/show/black+holes+in+string+theory">black holes in string theory</a>)</p>
+</li>
+</ul>
+
+<h4 id="of_dimension_6">Of dimension 6</h4>
 
 <p>In 6 dimensions (mostly motivated as singular <a class="existingWikiWord" href="/nlab/show/supersymmetry+and+Calabi-Yau+manifolds">Calabi-Yau compactifications</a> of <a class="existingWikiWord" href="/nlab/show/heterotic+string+theory">heterotic string theory</a> to 4d)</p>
 
@@ -666,14 +693,14 @@ margin-left: 0em;
 
 <div class="revisedby">
   <p>
-  Last revised on December 12, 2018 at 05:09:53.
+  Last revised on December 12, 2018 at 07:20:00.
   See the <a href="https://ncatlab.org/nlab/history/Riemannian orbifold" style="color: #005c19">history</a> of this page for a list of all contributions to it.
   </p>
 </div>
 
 <div class="navigation navfoot">
 
-  <a href="/nlab/edit/Riemannian+orbifold" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/Riemannian+orbifold/4" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(4 revisions)</span> | <a href="/nlab/show/diff/Riemannian+orbifold" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/Riemannian+orbifold" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
+  <a href="/nlab/edit/Riemannian+orbifold" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/Riemannian+orbifold/5" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(5 revisions)</span> | <a href="/nlab/show/diff/Riemannian+orbifold" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/Riemannian+orbifold" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
   | <a href="https://ncatlab.org/nlab/show/Riemannian orbifold/cite" style="color: black">Cite</a>
   <span class="views">
     | Views:
