--- a/pages/1594.html
+++ b/pages/1594.html
@@ -258,8 +258,8 @@ margin-left: 0em;
     //--><!]]>
   </script>
 
-  	<link href="https://ncatlab.org/nlab/atom_with_headlines" rel="alternate" title="Atom with headlines" type="application/atom+xml" />
-  	<link href="https://ncatlab.org/nlab/atom_with_content" rel="alternate" title="Atom with full content" type="application/atom+xml" />
+  	<link href="http://nlab-local/nlab/atom_with_headlines" rel="alternate" title="Atom with headlines" type="application/atom+xml" />
+  	<link href="http://nlab-local/nlab/atom_with_content" rel="alternate" title="Atom with full content" type="application/atom+xml" />
   <script type="text/javascript">
   document.observe("dom:loaded", function() {
     generateThmNumbers();
@@ -294,7 +294,7 @@ margin-left: 0em;
     <a href="/nlab/show/HomePage" accesskey="H" title="Home page">Home Page</a> |
     <a href="/nlab/all_pages" accesskey="A" title="List of all pages">All Pages</a> |
     <a href="/nlab/latest_revisions" accesskey="U" title="Latest edits and page creations">Latest Revisions</a> |
-    <a href="https://nforum.ncatlab.org/discussion/3428/#Item_13" title="Discuss this page in its dedicated thread on the nForum" style="color: black">Discuss this page</a> |
+    <a href="https://nforum.ncatlab.org/discussion/3428/#Item_18" title="Discuss this page in its dedicated thread on the nForum" style="color: black">Discuss this page</a> |
     <a href="/nlab/feeds" title="Subscribe to changes by Atom">Feeds</a> |
 <form accept-charset="utf-8" action="/nlab/search" id="navigationSearchForm" method="get">      <fieldset class="search"><input type="text" id="searchField" name="query" value="Search"
              onfocus="this.value == 'Search' ? this.value = '' : true"
@@ -950,7 +950,7 @@ margin-left: 0em;
 
 <h3 id="cohomology">(Co)homology</h3>
 
-<p>It has been noticed that the topological invariants of the underlying topological space of an orbifold as a topological space with an orbifold structure are not appropriate, but have to be corrected leading to <a class="existingWikiWord" href="/nlab/show/orbifold+Euler+characteristics">orbifold Euler characteristics</a>, <a class="existingWikiWord" href="/nlab/show/orbifold+cohomology">orbifold cohomology</a> etc. One of the constructions which is useful in this respect is the inertia orbifold (the inertia stack of the original orbifold) which gives rise to “twisted sectors” in Hilbert space of a quantum field theory on the orbifold, and also to twisted sectors in the appropriate cohomology spaces. A further generalization gives multitwisted sectors.</p>
+<p>It has been noticed that the topological invariants of the underlying topological space of an orbifold as a topological space with an orbifold structure are not appropriate, but have to be corrected leading to <a class="existingWikiWord" href="/nlab/show/orbifold+Euler+characteristics">orbifold Euler characteristics</a>, <a class="existingWikiWord" href="/nlab/show/orbifold+cohomology">orbifold cohomology</a> etc. One of the constructions which is useful in this respect is the <a class="existingWikiWord" href="/nlab/show/inertia+orbifold">inertia orbifold</a> (the inertia stack of the original orbifold) which gives rise to “twisted sectors” in Hilbert space of a quantum field theory on the orbifold, and also to twisted sectors in the appropriate cohomology spaces. A further generalization gives multitwisted sectors.</p>
 
 <h2 id="examples">Examples</h2>
 
@@ -967,6 +967,10 @@ margin-left: 0em;
 
 <li>
 <p>For <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><mi>𝒢</mi></mrow><annotation encoding="application/x-tex">\mathcal{G}</annotation></semantics></math> any orbifold, then the <a class="existingWikiWord" href="/nlab/show/mapping+space">mapping space</a> <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><msup><mi>𝒢</mi> <mrow><mi>Π</mi><mo stretchy="false">(</mo><msup><mi>S</mi> <mn>1</mn></msup><mo stretchy="false">)</mo></mrow></msup><mo>=</mo><msup><mi>𝒢</mi> <mrow><mi>B</mi><mi>ℤ</mi></mrow></msup></mrow><annotation encoding="application/x-tex">\mathcal{G}^{\Pi(S^1)} = \mathcal{G}^{B\mathbb{Z}}</annotation></semantics></math> is again an orbifold, called the <a class="existingWikiWord" href="/nlab/show/inertia+orbifold">inertia orbifold</a>.</p>
+</li>
+
+<li>
+<p><a class="existingWikiWord" href="/nlab/show/G2-orbifolds">G2-orbifolds</a></p>
 </li>
 
 <li>
@@ -1245,14 +1249,14 @@ margin-left: 0em;
 
 <div class="revisedby">
   <p>
-  Last revised on December  8, 2018 at 12:24:03.
+  Last revised on December 12, 2018 at 11:50:58.
   See the <a href="https://ncatlab.org/nlab/history/orbifold" style="color: #005c19">history</a> of this page for a list of all contributions to it.
   </p>
 </div>
 
 <div class="navigation navfoot">
 
-  <a href="/nlab/edit/orbifold" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/orbifold/52" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(52 revisions)</span> | <a href="/nlab/show/diff/orbifold" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/orbifold" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
+  <a href="/nlab/edit/orbifold" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/orbifold/53" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(53 revisions)</span> | <a href="/nlab/show/diff/orbifold" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/orbifold" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
   | <a href="https://ncatlab.org/nlab/show/orbifold/cite" style="color: black">Cite</a>
   <span class="views">
     | Views:
