--- a/pages/19934.html
+++ b/pages/19934.html
@@ -565,6 +565,7 @@ margin-left: 0em;
 <li><a href='#FlatCompact2DimensionalOrbifolds'>Flat compact 2-dimensional orbifolds</a></li>
 <li><a href='#flat_compact_4dimensional_orbifolds'>Flat compact 4-dimensional orbifolds</a></li>
 <li><a href='#flat_compact_6dimensional_orbifolds'>Flat compact 6-dimensional orbifolds</a></li>
+<li><a href='#7dimensional_orbifolds'>7-Dimensional <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><msub><mi>G</mi> <mn>2</mn></msub></mrow><annotation encoding="application/x-tex">G_2</annotation></semantics></math>-orbifolds</a></li>
 </ul>
 <li><a href='#related_concepts'>Related concepts</a></li>
 <li><a href='#references'>References</a></li>
@@ -613,6 +614,10 @@ margin-left: 0em;
 <h3 id="flat_compact_6dimensional_orbifolds">Flat compact 6-dimensional orbifolds</h3>
 
 <p>see <a href="#FRTV12">FRTV 12</a></p>
+
+<h3 id="7dimensional_orbifolds">7-Dimensional <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><msub><mi>G</mi> <mn>2</mn></msub></mrow><annotation encoding="application/x-tex">G_2</annotation></semantics></math>-orbifolds</h3>
+
+<p>see <em><a class="existingWikiWord" href="/nlab/show/G2-orbifold">G2-orbifold</a></em></p>
 
 <h2 id="related_concepts">Related concepts</h2>
 
@@ -693,14 +698,14 @@ margin-left: 0em;
 
 <div class="revisedby">
   <p>
-  Last revised on December 12, 2018 at 07:20:00.
+  Last revised on December 12, 2018 at 11:56:43.
   See the <a href="https://ncatlab.org/nlab/history/Riemannian orbifold" style="color: #005c19">history</a> of this page for a list of all contributions to it.
   </p>
 </div>
 
 <div class="navigation navfoot">
 
-  <a href="/nlab/edit/Riemannian+orbifold" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/Riemannian+orbifold/5" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(5 revisions)</span> | <a href="/nlab/show/diff/Riemannian+orbifold" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/Riemannian+orbifold" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
+  <a href="/nlab/edit/Riemannian+orbifold" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/Riemannian+orbifold/6" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(6 revisions)</span> | <a href="/nlab/show/diff/Riemannian+orbifold" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/Riemannian+orbifold" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
   | <a href="https://ncatlab.org/nlab/show/Riemannian orbifold/cite" style="color: black">Cite</a>
   <span class="views">
     | Views:
